// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mesh-insights calls mergeInsightsReducer with an empty array 1`] = `
{
  "dataplanes": {
    "online": 0,
    "partiallyDegraded": 0,
    "total": 0,
  },
  "dpVersions": {
    "envoy": {},
    "kumaDp": {},
  },
  "meshesTotal": 0,
  "policies": {
    "CircuitBreaker": {
      "total": 0,
    },
    "FaultInjection": {
      "total": 0,
    },
    "HealthCheck": {
      "total": 0,
    },
    "MeshGateway": {
      "total": 0,
    },
    "MeshGatewayRoute": {
      "total": 0,
    },
    "ProxyTemplate": {
      "total": 0,
    },
    "RateLimit": {
      "total": 0,
    },
    "Retry": {
      "total": 0,
    },
    "Timeout": {
      "total": 0,
    },
    "TrafficLog": {
      "total": 0,
    },
    "TrafficPermission": {
      "total": 0,
    },
    "TrafficRoute": {
      "total": 0,
    },
    "TrafficTrace": {
      "total": 0,
    },
  },
}
`;

exports[`mesh-insights calls mergeInsightsReducer with mesh insights array 1`] = `
{
  "dataplanes": {
    "online": 6,
    "partiallyDegraded": 10,
    "total": 26,
  },
  "dpVersions": {
    "envoy": {
      "1.16.1": {
        "online": 1,
        "partiallyDegraded": 0,
        "total": 8,
      },
      "1.16.2": {
        "online": 1,
        "partiallyDegraded": 0,
        "total": 4,
      },
    },
    "kumaDp": {
      "1.0.4": {
        "online": 4,
        "partiallyDegraded": 0,
        "total": 6,
      },
      "1.0.5": {
        "online": 2,
        "partiallyDegraded": 0,
        "total": 2,
      },
    },
  },
  "meshesTotal": 5,
  "policies": {
    "CircuitBreaker": {
      "total": 0,
    },
    "FaultInjection": {
      "total": 0,
    },
    "HealthCheck": {
      "total": 0,
    },
    "MeshGateway": {
      "total": 0,
    },
    "MeshGatewayRoute": {
      "total": 0,
    },
    "ProxyTemplate": {
      "total": 0,
    },
    "RateLimit": {
      "total": 0,
    },
    "Retry": {
      "total": 0,
    },
    "Secret": {
      "total": 12,
    },
    "ServiceInsight": {
      "total": 22,
    },
    "Timeout": {
      "total": 0,
    },
    "TrafficLog": {
      "total": 0,
    },
    "TrafficPermission": {
      "total": 6,
    },
    "TrafficRoute": {
      "total": 10,
    },
    "TrafficTrace": {
      "total": 0,
    },
  },
}
`;

exports[`mesh-insights calls parseInsightReducer with mesh insights 1`] = `
{
  "dataplanes": {
    "online": 3,
    "partiallyDegraded": 5,
    "total": 13,
  },
  "dpVersions": {
    "envoy": {
      "1.16.1": {
        "online": 1,
        "partiallyDegraded": 0,
        "total": 8,
      },
      "1.16.2": {
        "online": 1,
        "partiallyDegraded": 0,
        "total": 4,
      },
    },
    "kumaDp": {
      "1.0.4": {
        "online": 2,
        "partiallyDegraded": 0,
        "total": 3,
      },
      "1.0.5": {
        "online": 1,
        "partiallyDegraded": 0,
        "total": 1,
      },
    },
  },
  "meshesTotal": 1,
  "policies": {
    "CircuitBreaker": {
      "total": 0,
    },
    "FaultInjection": {
      "total": 0,
    },
    "HealthCheck": {
      "total": 0,
    },
    "MeshGateway": {
      "total": 0,
    },
    "MeshGatewayRoute": {
      "total": 0,
    },
    "ProxyTemplate": {
      "total": 0,
    },
    "RateLimit": {
      "total": 0,
    },
    "Retry": {
      "total": 0,
    },
    "Secret": {
      "total": 6,
    },
    "ServiceInsight": {
      "total": 11,
    },
    "Timeout": {
      "total": 0,
    },
    "TrafficLog": {
      "total": 0,
    },
    "TrafficPermission": {
      "total": 3,
    },
    "TrafficRoute": {
      "total": 5,
    },
    "TrafficTrace": {
      "total": 0,
    },
  },
}
`;

exports[`mesh-insights calls parseInsightReducer without any data 1`] = `
{
  "dataplanes": {
    "online": 0,
    "partiallyDegraded": 0,
    "total": 0,
  },
  "dpVersions": {
    "envoy": {},
    "kumaDp": {},
  },
  "meshesTotal": 1,
  "policies": {
    "CircuitBreaker": {
      "total": 0,
    },
    "FaultInjection": {
      "total": 0,
    },
    "HealthCheck": {
      "total": 0,
    },
    "MeshGateway": {
      "total": 0,
    },
    "MeshGatewayRoute": {
      "total": 0,
    },
    "ProxyTemplate": {
      "total": 0,
    },
    "RateLimit": {
      "total": 0,
    },
    "Retry": {
      "total": 0,
    },
    "Timeout": {
      "total": 0,
    },
    "TrafficLog": {
      "total": 0,
    },
    "TrafficPermission": {
      "total": 0,
    },
    "TrafficRoute": {
      "total": 0,
    },
    "TrafficTrace": {
      "total": 0,
    },
  },
}
`;
